# autonomous_robot

./: 111.sh  CMakeLists.txt  package.xml
config/: yolov5_config.yaml
launch/: autonomous_robot.launch
scripts/: arm_controller.py  main_controller.py  navigation_controller.py  object_detection.py  slam_controller.py
urdf/: arm.xacro  base.xacro  camera.xacro  robot.urdf.xacro
