<?xml version="1.0"?>
<package format="2">
    <name>autonomous_robot</name>
    <version>0.0.1</version>
    <description>The autonomous_robot package</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>gmapping</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
</package>